--- a/Practical-1.1
+++ b/Practical-1.1
@@ -1,1 +1,19 @@
 1. Create a program that asks the user to enter their name and their age. Print out a message that tells how many years they have to be 100 years old.
+
+2. Write a program hat prints all the elements that are less than 5. 
+
+List<int> a = [1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89];
+
+3.Define two integer variables called netSalary and expenses.
+
+Then write a program that prints different sentences using if/else statement.
+
+4. Write above program using ternary operator.
+
+5. Print star patten using for loop.
+  
+  *
+  *  *
+  *  *  *
+  *  *  *  *
+  *  *  *  *  *
