--- a/Solution-1.1
+++ b/Solution-1.1
@@ -14,4 +14,23 @@ void main() {
     print("$name, You have $yearsToHunderd years to be 100");
 }
 
+2.
+List<int> a=
+for(var i in a){
+if(i<5)
+{
+print(i);}
+}
+3.
+
+final int netSalary= 10000;
+  final int expenses= 9000;
+  if(netSalary<expenses){
+    print('Your expenses are more than your salary ');
+  }else if(netSalary>expenses){
+    print('You can spend more money');
+  }else{
+    print('Your salary and expenses are same');
+  }
+
 ```
