--- a/Solution-1.1
+++ b/Solution-1.1
@@ -15,15 +15,15 @@ void main() {
 }
 
 2.
-List<int> a=
-for(var i in a){
-if(i<5)
-{
-print(i);}
-}
+   List<int> a = [1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89];
+   for(var i in a){
+         if(i<5){
+           print(i);
+           }
+         }
 3.
 
-final int netSalary= 10000;
+  final int netSalary= 10000;
   final int expenses= 9000;
   if(netSalary<expenses){
     print('Your expenses are more than your salary ');
@@ -32,5 +32,12 @@ final int netSalary= 10000;
   }else{
     print('Your salary and expenses are same');
   }
+  
+  4.
+    final int netSalary= 10000;
+    final int expenses= 9000;
+    
+    netsalary<expenses? print('Your expenses are more than your salary '): print('You can spend more money');
+  
 
 ```
