--- a/Solution-1.1
+++ b/Solution-1.1
@@ -26,18 +26,22 @@ void main() {
   final int netSalary= 10000;
   final int expenses= 9000;
   if(netSalary<expenses){
-    print('Your expenses are more than your salary ');
+    print('You should earn more money ');
   }else if(netSalary>expenses){
     print('You can spend more money');
   }else{
     print('Your salary and expenses are same');
   }
   
-  4.
+4.
     final int netSalary= 10000;
     final int expenses= 9000;
     
-    netsalary<expenses? print('Your expenses are more than your salary '): print('You can spend more money');
+    netsalary<expenses? print('You should earn more money '): print('You can spend more money');
   
+5.
 
+  for(int i = 0; i <=5; i++){
+    print('* ' * i);
+  }
 ```
